# vscode-pydata-viewer

./: .gitignore  .vscodeignore  CHANGELOG.md  CONFIG_GUIDE.md  LICENSE  README.md  comparison_demo.py  create_test_cases.py  package-lock.json  package.json  pyproject.toml  simple_processor.py  test_enhanced_pkl.py  test_large_pkl.py  test_local_imports.py
.github/workflows/: python-test.yml
pyscripts/: read_files.py  read_files_v0.py  requirements.txt  view_as_array.py  view_as_image.py
pyscripts/example/: create_example.py  create_local_import_example.py  custom_processor.py  local_import_processor.py
pyscripts/test/: test_read_files.py
src/: disposable.ts  extension.ts  pydataPreview.ts  pydataProvider.ts  pythonInterpreter.ts  pythonPathResolution.ts  utils.ts
src/pyscripts/: read_files.py
test_output/: large_numeric.pkl  large_test.pkl  mixed_types.pkl  nested_structure.pkl
