[project]
name = "vscode-pydata-viewer"
version = "0.1.0"
description = "Display PyData files (.npz .npy .pkl .pth) in VSCode"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.19.0",
    "torch>=1.9.0",
    "matplotlib>=3.3.0",
    "compress-pickle>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
]
dev = [
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
]
